# furlong

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/skills/db-access/: SKILL.md
backup/: Dockerfile  backup.sh  crontab
db/: schema.sql
docs/: development.md  experiments.md  improvement_plan.md  knowledge.md  plan.md  spec.md  todo.md
docs/plan/: db-backup.md  db-check-missing.md  ensemble-montecarlo.md  future-race-prediction.md  horse-data-supplement.md  overview.md  prediction-accuracy-followup.md  prediction-accuracy.md  predictor-api.md  production-deploy.md  repository-package.md  scraper-scheduler.md
predictor/: Dockerfile  README.md  pyproject.toml
predictor/predictor/: __init__.py  calibration.py  evaluation.py  main.py  model.py  output.py  preprocessing.py  simulation.py
predictor/tests/: test_preprocessing.py
repository/: pyproject.toml
repository/repository/: __init__.py  database.py  models.py
repository/tests/: conftest.py  test_database_integration.py
scraper/: Dockerfile  README.md  pyproject.toml
scraper/scraper/: __init__.py  backfill_missing.py  check_missing.py  client.py  database.py  main.py  scheduler.py  types.py
scraper/scraper/parsers/: __init__.py  base.py  horse.py  jockey.py  odds.py  race_detail.py  race_list.py  shutuba.py  trainer.py
scraper/tests/: test_race_detail_parser.py  test_shutuba_parser.py
tools/: check_missing.py
