[project]
name = "furlong-predictor"
version = "0.1.0"
description = "競馬予想プログラム"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]
# 機械学習を採用する場合は以下を追加
ml = [
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["predictor"]

[tool.ruff.lint]
select = ["E", "F", "I"]
