[project]
name = "furlong-predictor"
version = "0.1.0"
description = "競馬予想プログラム"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "furlong-repository",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[tool.uv.sources]
furlong-repository = { workspace = true }

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["predictor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
